--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,11 @@
 	====================================
 		 		 Login Form
 	=====================================
--->			
-<p>Testing background.</p>
+-->		
+
+<div class="row">
+    <h1 id="login-logo">Tracing Ink</h1>
+    <p id="login-branding">Project Management Made Simple</p>
+</div>
+
 <% include footer %>
