Fininalized panel header. Added gradient and Futura fotn from typekit.

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,18 +4,23 @@
 
     <head>
 
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-      <title><%= title %></title>
+        <title><%= title %></title>
 
-      <link rel="stylesheet" href="/css/normalize.css"><!-- Normalize.CSS-->
-      <link rel="stylesheet" href="/css/custom.css"><!-- Custom.CSS-->
+        <link rel="stylesheet" href="/css/normalize.css"><!-- Normalize.CSS-->
+        <link rel="stylesheet" href="/css/custom.css"><!-- Custom.CSS-->
 
-      <script src="/js/vendor/modernizr.js"></script><!-- Modernizr.JS-->
-
+        <script src="/js/vendor/modernizr.js"></script><!-- Modernizr.JS-->
+        
+        <script src="//use.typekit.net/qdg6fcy.js"></script> <!-- Adobe Typekit -->
+        <script>try{Typekit.load();}catch(e){}</script>
+        
     </head><!-- End of Head -->
-<body>
-<!--Begining of Wrapper-->
-    <div id="wrapper">
+    
+    
+    <body>
+        <!--Begining of Wrapper-->
+        <div id="wrapper">
         
