--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,4 +10,11 @@
     <p id="login-branding">Project Management Made Simple</p>
 </div>
 
+<div class="row">
+    <div class="panel">
+        <div class="panel-head">Login</div>
+        <div class="panel-body"></div>
+    </div>
+</div>
+
 <% include footer %>
