--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,16 +1,21 @@
-/* Wrapper Styles */
+/* Layout Styles */
 
 body{
 /*    width: 100%;*/
     background-image: url("/img/pattern.png");
     background-repeat: repeat;
+    font-size: 16px;
 }
+
 .row{
     width: 100%;
     clear: both;
     padding: 0;
     margin: 0;
 }
+
+
+/* Login's Header Branding */
 
 #login-logo {
     margin: 0;
@@ -27,6 +32,7 @@ body{
 
 #login-branding {
     margin: 0;
+    margin-bottom: 30px;
     color: #E5E5E5;
     text-align: center;
 	font-family: 'Helvetica Neue';
@@ -35,4 +41,31 @@ body{
 	font-variant: normal;
 	font-weight: 100;
 	line-height: 44px;
+}
+
+/* Ui Elements */
+.panel{
+    width: 90%;
+    background-color: #F2F0F0;
+    border-radius: 5px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.panel-head{
+    text-align: center;
+    font-size: 2.;
+    font-family: "futura-pt",sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 44px;
+    
+    background: rgba(92,100,132,0);
+    background: -moz-linear-gradient(top, rgba(92,100,132,0) 0%, rgba(92,100,132,0.25) 93%, rgba(92,100,132,0.25) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(92,100,132,0)), color-stop(93%,     rgba(92,100,132,0.25)), color-stop(100%, rgba(92,100,132,0.25)));
+    background: -webkit-linear-gradient(top, rgba(92,100,132,0) 0%, rgba(92,100,132,0.25) 93%, rgba(92,100,132,0.25) 100%);
+    background: -o-linear-gradient(top, rgba(92,100,132,0) 0%, rgba(92,100,132,0.25) 93%, rgba(92,100,132,0.25) 100%);
+    background: -ms-linear-gradient(top, rgba(92,100,132,0) 0%, rgba(92,100,132,0.25) 93%, rgba(92,100,132,0.25) 100%);
+    background: linear-gradient(to bottom, rgba(92,100,132,0) 0%, rgba(92,100,132,0.25) 93%, rgba(92,100,132,0.25) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5c6484', endColorstr='#5c6484', GradientType=0 );
 }
