--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,8 @@
 						  Footer
 			=====================================
 -->		
-        <script src="/js/vendor/jquery.js"></script><!-- jQuery.JS-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script><!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script><!-- jQuery UI-->
     </div> <!-- End of Wrapper -->
 </body>
 </html>
