--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -43,7 +43,7 @@ body{
 	line-height: 44px;
 }
 
-/* Ui Elements */
+/* Panel Rules */
 .panel{
     width: 90%;
     background-color: #F2F0F0;
@@ -68,4 +68,62 @@ body{
     background: -ms-linear-gradient(top, rgba(92,100,132,0) 0%, rgba(92,100,132,0.25) 93%, rgba(92,100,132,0.25) 100%);
     background: linear-gradient(to bottom, rgba(92,100,132,0) 0%, rgba(92,100,132,0.25) 93%, rgba(92,100,132,0.25) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5c6484', endColorstr='#5c6484', GradientType=0 );
+}
+
+.panel-body{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+/* Form Elements */
+
+label{
+    color: #000000;
+	font-family: 'Helvetica Neue';
+	font-size: 18px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 100;
+	line-height: 44px;
+}
+
+input{
+    width: 92%;
+    height: 35px;
+    color: #000000;
+	font-family: 'Helvetica Neue';
+	font-size: 18px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 100;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+.submit{ /* Submit button */
+    width: 100%;
+    height: 40px;
+    background-color: #6ABCEA;
+    color: #ffffff;
+    border-radius: 5px;
+    font-weight: 500;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+form .row{
+    margin-bottom: 15px;
+}
+form .row:last-of-type{
+    margin-bottom: 0;
+}
+
+.form-anchor {
+    text-align: center;
+    color: #626262;
+    font-size: 12px;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
