--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <% include header %>
 <!--		
 	====================================
-		 		 Login Form
+		 		 Register Form
 	=====================================
 -->		
 
@@ -16,11 +16,21 @@
     
     <div class="panel">
         
-        <div class="panel-head">Login</div>
+        <div class="panel-head">Register</div>
         
         <div class="panel-body">
             
             <form>
+                
+                <div class="row">
+                    <label for="fname">First Name:</label>
+                    <input type="text" name="fname">
+                </div>
+                
+                <div class="row">
+                    <label for="lname">Last Name:</label>
+                    <input type="text" name="lname">
+                </div>
                 
                 <div class="row">
                     <label for="email">Email:</label>
@@ -33,7 +43,8 @@
                 </div>
                 
                 <div class="row">
-                    <p class="form-anchor"><a>Forgot your Password?</a></p>
+                    <label for="password">Confirm Password:</label>
+                    <input type="password" name="password">
                 </div>
                 
                 <div class="row">
@@ -41,7 +52,7 @@
                 </div>
                 
                 <div class="row">
-                    <p class="form-anchor"><a href="/register">Not a member yet? Register here.</a></p>
+                    <p class="form-anchor"><a href="/">Already a member? Log in here.</a></p>
                 </div>
                 
             </form>
