--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -46,10 +46,11 @@ body{
 /* Panel Rules */
 .panel{
     width: 90%;
+    max-width: 500px;
     background-color: #F2F0F0;
     border-radius: 5px;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .panel-head{
