Completed Login, Register and Logout functionality.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
         
         <div class="panel-body">
             
-            <form>
+            <form action='/loginaction' method="post">
                 
                 <div class="row">
                     <label for="email">Email:</label>
@@ -28,8 +28,8 @@
                 </div>
                 
                 <div class="row">
-                    <label for="password">Password:</label>
-                    <input type="password" name="password">
+                    <label for="pass">Password:</label>
+                    <input type="password" name="pass">
                 </div>
                 
                 <div class="row">
@@ -37,7 +37,7 @@
                 </div>
                 
                 <div class="row">
-                    <input type="submit" class="submit">
+                    <input type="submit" class="submit" value="Submit">
                 </div>
                 
                 <div class="row">
