Added phone number field to the register which was breaking the functionality by its absence.

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,8 +14,13 @@
 
         <script src="/js/vendor/modernizr.js"></script><!-- Modernizr.JS-->
         
-        <script src="//use.typekit.net/qdg6fcy.js"></script> <!-- Adobe Typekit -->
+<!--
+        <script src="//use.typekit.net/qdg6fcy.js"></script>  Adobe Typekit 
         <script>try{Typekit.load();}catch(e){}</script>
+-->
+        
+        <!-- AngularJS -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
         
     </head><!-- End of Head -->
     
