Added AngularJS. It's routing the front end views while node authenticates and makes database requests. Still need to work on loading the dashboard view, but the authentication is taking place and the users data is being loaded on the front-end.

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,10 +1,12 @@
-<% include header %>
+
 <!--		
 	====================================
 		 	User's Dashboard
 	=====================================
 -->	
 
-<p>Dashboard</p>
-
-<% include footer %>
+<div class="row">
+    
+    <h1 id="login-logo">Welcome {{name}}</h1>
+    
+</div>
