--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -7,6 +7,6 @@
 
 <div class="row">
     
-    <h1 id="login-logo">Welcome {{name}}</h1>
+    <h1 id="login-logo">Welcome {{user.fname}}</h1>
     
 </div>
