Added functionality to allow only admin to add new clients. The app gets the current date in UTC-5:00 and adds it as a date stamp upon client creation. The clients view queries the app for all clients if the user is an admin and loads them using ng-repeat.

--- a/public/views/clients.html
+++ b/public/views/clients.html
@@ -1,12 +1,29 @@
 
 <!--		
 	====================================
-		 	Clients CRUD
+		 	All Clients 
 	=====================================
 -->	
 
 <div class="row">
     
-    <h1 id="login-logo">Clients</h1>
+    <h1 id="login-logo">Tracing Ink</h1>
     
+</div>
+
+<div class="row addButtonRow">
+
+    <a href="/#/addClient" class="addButton">+ NEW</a>
+
+</div>
+
+<div class="row">
+    <div ><div class="row">
+    
+    <div class="panel">
+        
+        <div ng-repeat="client in clients" class="panel-head">{{client.cName}}</div>
+
+    </div>
+</div></div>
 </div>
