--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -168,6 +168,10 @@ body{
     margin-right: auto;
 }
 
+.panel.secured{
+    margin-top: 25px;
+}
+
 .panel-head{
     text-align: center;
     font-size: 2.;
@@ -243,4 +247,19 @@ form .row:last-of-type{
     font-size: 12px;
     padding-bottom: 15px;
     padding-top: 15px;
+}
+
+.addButton{
+    text-decoration: none;
+    float: right;
+    color: #E5E5E5;
+    font-size: 24px;
+    padding-bottom: 15px;
+    padding-top: 25px;
+}
+
+.addButtonRow{
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
