--- a/public/views/addManager.html
+++ b/public/views/addManager.html
@@ -20,7 +20,7 @@
         
         <div class="panel-body">
             
-            <form method="post" ng-submit="submit()" ng-controller="managerController">
+            <form method="post" ng-submit="submit()">
                 
                 <div class="row">
                     <label for="email">Email:</label>
