Took some time to properly comment the app. Just finished commenting the main Node JS file. I also found a few logical errors where within the routes that where not properly verifying if the user was admin or not. Those errors have been corrected and tested. Added logic that gets the users data as soon as the dashboard is loaded to avoid a bug that missed the users data when they logged in

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -5,7 +5,7 @@
 	=====================================
 -->	
 
-<div class="row">
+<div class="row" ng-controller="dashboardController">
     
     <h1 id="login-logo">Welcome {{user.fname}}</h1>
     
