Reconfigured the add client route to not allow to send invites to emails already registered as users. Also reconfigured the add manager route to block the register if the email submitted is already registered. Added functionality to invite regular members into a specific team once a manager logs in to their team section. The email arrives succesfully. Need to now configure a route to serve a register form for regular members, then load all members into the team section. Added functionality that pushes a member object into the clients object in the database when a manager registers.

--- a/public/views/addClient.html
+++ b/public/views/addClient.html
@@ -22,13 +22,13 @@
             <form method="post" ng-submit="addClient()" ng-controller="clientsController">
                 
                 <div class="row">
-                    <label for="email">Client Name:</label>
+                    <label for="cName">Client Name:</label>
                     <input type="text" name="cName" ng-model="client.cName">
                 </div>
                 
                 <div class="row">
                     <label for="email">Email:</label>
-                    <input type="text" name="email" ng-model="client.email">
+                    <input type="email" name="email" ng-model="client.email">
                 </div>
                 
 
@@ -36,12 +36,6 @@
                 <div class="row">
                     <input type="submit" class="submit" value="Create">
                 </div>
-                
-<!--
-                <div class="row">
-                    <p class="form-anchor"><a href="/#/register">Not a member yet? Register here.</a></p>
-                </div>
--->
                 
             </form>
             
