--- a/public/views/addManager.html
+++ b/public/views/addManager.html
@@ -39,7 +39,7 @@
                 
                 <div class="row">
                     <label for="email">Email:</label>
-                    <input type="text" name="email" ng-model="manager.email">
+                    <input type="email" name="email" ng-model="manager.email">
                 </div>
                 
                 <div class="row">
