--- a/public/views/login.html
+++ b/public/views/login.html
@@ -23,7 +23,7 @@
                 
                 <div class="row">
                     <label for="email">Email:</label>
-                    <input type="text" name="email" ng-model="user.email">
+                    <input type="email" name="email" ng-model="user.email">
                 </div>
                 
                 <div class="row">
@@ -38,12 +38,6 @@
                 <div class="row">
                     <input type="submit" class="submit" value="Login" ng-click="login(user)">
                 </div>
-                
-<!--
-                <div class="row">
-                    <p class="form-anchor"><a href="/#/register">Not a member yet? Register here.</a></p>
-                </div>
--->
                 
             </form>
             
