Finished the addMember functionality. This will now register a user with member level privileges. A manager or a master admin can send a invite to a user to allow them access to the system.Reconfigured addClient route which broke in the process of building the other routes and the add Manager. I changed a mongo method from findOne() to find() and it would find a user's in the database even though the user didn't exist. I know, wierd huh?

--- a/public/views/inviteSuccess.html
+++ b/public/views/inviteSuccess.html
@@ -15,7 +15,7 @@
             <p>An email invite has been sent to {{member.email}}</p>
             
             
-            <button href="/team">Ok</button>
+            <a href="/#/team">Ok</a>
             
         </div>
     </div>
