Had some trouble with the messaging view animations and css. Continued on the projects functionality. Developed a form to add new projects. I'm having problems gathering the values of the checkbox submission on the angular front-end. Pursuing again tomorrow.

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,5 +1,45 @@
+<div class="row" ng-class="{true: 'pushDown', false: ''}[user.type == 3]">
+    
+    <h1 id="login-logo">{{user.cName}}'s Projects</h1>
+    
+</div>
+
+<div class="row addButtonRow" ng-show="user.type==1 || user.type==2">
+
+    <a href="/#/newProject" class="addButton">+ NEW PROJECT</a>
+
+</div>
+
 <div class="row">
-    
-    <h1 id="login-logo">Projects</h1>
-    
+
+    <div class="panel panel-dropdown" ng-repeat="project in projects" >
+        
+        <div class="panel-head" ng-click="panelOpen = !panelOpen">
+            <p class="panel-main">Project name</p>
+            
+        </div>
+        
+        <div class="panel-body" ng-show="panelOpen">
+       
+            <div class="row">
+                <button type="submit" class="submit"  ng-click="message(member)">
+                    Assign Members
+                </button>
+            </div>
+        </div>
+        
+<!--
+        <div class="panel-body" ng-class="{open:panelOpen}">
+       
+            <div class="row">
+                <button type="submit" class="submit"  ng-click="message(member)">
+                    New Message
+                </button>
+            </div>
+        </div>
+-->
+
+
+    </div>
+
 </div>
