--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -251,6 +251,18 @@ input{
     padding-right: 3%;
 }
 
+textarea{
+    width: 92%;
+    color: #000000;
+	font-family: 'Helvetica Neue';
+	font-size: 18px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 100;
+    padding: 1.5% 3%;
+    min-height: 40px;
+}
+
 .submit{ /* Submit button */
     width: 100%;
     height: 40px;
@@ -285,6 +297,29 @@ form .row:last-of-type{
     font-size: 24px;
     padding-bottom: 15px;
     padding-top: 25px;
+}
+.backButton{
+    text-decoration: none;
+    float: left;
+    color: #E5E5E5;
+    font-size: 24px;
+    padding-bottom: 15px;
+    padding-top: 25px;
+}
+
+.checkbox{
+
+    width: 10%;
+}
+.checkboxLabel{
+    position: relative;
+    bottom: 11px;
+    width: 60%;
+    display: inline;
+    margin: 0;
+    
+    line-height: -5px;
+    
 }
 
 .addButtonRow{
