--- a/public/views/addClient.html
+++ b/public/views/addClient.html
@@ -11,6 +11,12 @@
     
 </div>
 
+<div class="row addButtonRow" >
+
+    <a href="/#/clients" class="backButton">BACK</a>
+
+</div>
+
 <div class="row">
     
     <div class="panel secured">
