--- a/public/views/newProject.html
+++ b/public/views/newProject.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <label for="team">Assign Members:</label>
                     <div class="row" ng-repeat="member in teamMembers">
-                        <input type="checkbox" class="checkbox" name="team" checklist-model="project.members" checklist-value="member._id"> <p class="checkboxLabel">{{member.fname}} {{member.lname}}</p>
+                        <input type="checkbox" ng-hide="member._id == user._id" class="checkbox" name="team" checklist-model="project.members" checklist-value="member._id"> <p class="checkboxLabel" ng-hide="member._id == user._id">{{member.fname}} {{member.lname}}</p>
                     </div>
                     
                 </div>
