--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -12,21 +12,15 @@
 
 <div class="row">
 
-    <div class="panel panel-dropdown" ng-repeat="project in projects" >
-        
-        <div class="panel-head" ng-click="panelOpen = !panelOpen">
-            <p class="panel-main">Project name</p>
-            
-        </div>
-        
-        <div class="panel-body" ng-show="panelOpen">
-       
-            <div class="row">
-                <button type="submit" class="submit"  ng-click="message(member)">
-                    Assign Members
-                </button>
+    <div class="panel" ng-repeat="project in projects" >
+        <a ng-href="/project/{{project._id}}" class="project-link">
+            <div class="panel-head">
+
+                <p class="panel-main left">{{project.name}}</p>
+                <p class="panel-main right">{{project.members.length}} Members</p>
+
             </div>
-        </div>
+        </a>
         
 <!--
         <div class="panel-body" ng-class="{open:panelOpen}">
