--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -13,7 +13,7 @@
 <div class="row">
 
     <div class="panel" ng-repeat="project in projects" >
-        <a ng-href="/project/{{project._id}}" class="project-link">
+        <a ng-href="#/project/{{project._id}}" class="project-link">
             <div class="panel-head">
 
                 <p class="panel-main left">{{project.name}}</p>
