--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -148,6 +148,19 @@ body{
 	line-height: 44px;
 }
 
+#login-logo-secondary {
+    margin: 0;
+    margin-top: 0px;
+    color: #E5E5E5;
+    text-align: center;
+	font-family: 'Helvetica Neue';
+	font-size: 20px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 200;
+	line-height: 44px;
+}
+
 #login-branding {
     margin: 0;
     margin-bottom: 30px;
@@ -174,11 +187,22 @@ body{
     margin-right: auto;
     overflow: hidden;
 }
-.panel:first-child {
+
+.clear-panel{
+    width: 90%;
+    max-width: 500px;
+    color: #F2F0F0;
+    background-color: transparent;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
+
+.panel:first-child, .clear-panel:first-child {
     border-radius: 5px 5px 0 0;   
 }
 
-.panel:last-child {
+.panel:last-child, .clear-panel:last-child {
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
 }
@@ -239,11 +263,32 @@ p.panel-secondary{
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5c6484', endColorstr='#5c6484', GradientType=0 );
 }
 
+.panel-head-clear{
+    overflow: hidden;
+    text-align: center;
+    font-size: 1.5em;
+    font-family: "futura-pt",sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 44px;
+}
+
 .panel-body{
     padding-top: 25px;
     padding-bottom: 25px;
     padding-left: 5%;
     padding-right: 5%;
+}
+
+.clear-panel .panel-main{
+    margin-bottom: 0;
+    padding-left: 0;
+}
+.clear-panel .panel-body{
+    font-size: 1.2em;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
 }
 
 /* Form Elements */
