--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -41,6 +41,10 @@ body{
     line-height: 0;
 }
 
+.page-header a{
+    text-decoration: none;
+}
+
 #user-profile-btn{
     width: 100%;
     position: absolute;
@@ -328,9 +332,10 @@ textarea{
     min-height: 40px;
 }
 
-.submit{ /* Submit button */
+.submit, .delete, .edit{ /* Submit button */
     width: 100%;
-    height: 40px;
+    margin-top: 10px;
+    height: 50px;
     background-color: #6ABCEA;
     color: #ffffff;
     border-radius: 5px;
@@ -338,6 +343,10 @@ textarea{
     padding-top: 5px;
     padding-bottom: 5px;
     border: none;
+}
+
+.delete{ /* Submit button */
+    background-color: #f87676;
 }
 
 form .row{
@@ -363,6 +372,20 @@ form .row:last-of-type{
     padding-bottom: 15px;
     padding-top: 25px;
 }
+
+.addButton.left{
+    
+    float: left;
+    padding-left: 0;
+
+}
+.addButton.right{
+    
+    float: right;
+    padding-right: 0;
+
+}
+
 .backButton{
     text-decoration: none;
     float: left;
