--- a/public/views/clients.html
+++ b/public/views/clients.html
@@ -7,7 +7,7 @@
 
 <div class="row">
     
-    <h1 id="login-logo">Tracing Ink</h1>
+    <h1 id="login-logo">Tracing Ink's Clients</h1>
     
 </div>
 
@@ -24,7 +24,7 @@
         
             <div class="panel-head" ng-click="panelOpen = !panelOpen">
             
-                <p class="panel-main">{{client.cName}}</p>
+                <p class="panel-main left">{{client.cName}}</p>
                 
             </div>
 
