--- a/public/views/inviteMember.html
+++ b/public/views/inviteMember.html
@@ -5,17 +5,12 @@
 	=====================================
 -->	
 
-<div class="row">
+<div class="row page-header">
     
-    <h1 id="login-logo">{{user.cName}}</h1>
+    <a ng-href="/#/team"><h1 id="login-logo">{{user.cName}}'s Team</h1></a>
     
 </div>
 
-<div class="row addButtonRow" >
-
-    <a href="/#/team" class="backButton">BACK</a>
-
-</div>
 
 <div class="row">
     
