--- a/public/views/updateTask.html
+++ b/public/views/updateTask.html
@@ -15,11 +15,11 @@
     
     <div class="panel secured">
         
-        <div class="panel-head">Add New Task </div> 
+        <div class="panel-head">Update Task</div> 
         
         <div class="panel-body">
             
-            <form method="post" ng-submit="addTask()">
+            <form method="post" ng-submit="updateTask()">
                 
                 <div class="row">
                     <label for="name">Task Name:</label>
@@ -45,7 +45,7 @@
                 </div>
                 
                 <div class="row">
-                    <input type="submit" class="submit" value="Create">
+                    <input type="submit" class="submit" value="Save">
                 </div>
                 
                 
