--- a/public/views/addClient.html
+++ b/public/views/addClient.html
@@ -5,16 +5,10 @@
 	=====================================
 -->	
 
-<div class="row">
+<div class="row page-header">
     
-    <h1 id="login-logo">Tracing Ink</h1>
+    <a ng-href="/#/clients"><h1 id="login-logo">Tracing Ink's Clients</h1></a>
     
-</div>
-
-<div class="row addButtonRow" >
-
-    <a href="/#/clients" class="backButton">BACK</a>
-
 </div>
 
 <div class="row">
