--- a/public/views/newProject.html
+++ b/public/views/newProject.html
@@ -5,16 +5,10 @@
 	=====================================
 -->	
 
-<div class="row">
+<div class="row page-header">
     
-    <h1 id="login-logo">{{user.cName}}'s Projects</h1>
+    <a ng-href="/#/projects"><h1 id="login-logo">{{user.cName}}'s Projects</h1></a>
     
-</div>
-
-<div class="row addButtonRow" >
-
-    <a href="/#/projects" class="backButton">BACK</a>
-
 </div>
 
 <div class="row">
