--- a/public/views/singleProject.html
+++ b/public/views/singleProject.html
@@ -34,11 +34,11 @@
 
 <div class="row">
 
-    <div class="panel panel-dropdown" ng-repeat="task in tasks" >
+    <div class="panel panel-dropdown" ng-repeat="task in tasks | filter: {completed: false}" >
         
         <div class="panel-head" ng-click="panelOpen = !panelOpen">
-            <p class="panel-main left">{{task.name}}</p>
-            <p class="panel-main right">{{task.members.length}} Members</p>
+            <p class="panel-main cluttered">{{task.name}}</p>
+            <p class="panel-main cluttered secondary">{{task.members.length}} Members</p>
         </div>
         
         <div class="panel-body" ng-show="panelOpen">
@@ -56,9 +56,9 @@
             </div>
             
             <div class="row">
-                <button type="submit" class="edit"  ng-click="edit(task._id)">
+                <a ng-href="/#/editTask/{{project._id}}/{{task._id}}"><button type="submit" class="edit" >
                     Edit
-                </button>
+                </button></a>
             </div>
             
             <div class="row">
@@ -68,19 +68,52 @@
             </div>
             
         </div>
-        
-<!--
-        <div class="panel-body" ng-class="{open:panelOpen}">
-       
-            <div class="row">
-                <button type="submit" class="submit"  ng-click="message(member)">
-                    New Message
-                </button>
-            </div>
-        </div>
--->
 
 
     </div>
 
 </div>
+
+<div class="row addButtonRow">
+
+    
+    <a class="addButton left">Completed Tasks:</a>
+
+</div>
+
+<div class="row">
+
+    <div class="panel panel-dropdown" ng-repeat="task in tasks | filter: {completed: true}" >
+        
+        <div class="panel-head" ng-click="panelOpen = !panelOpen">
+            <p class="panel-main cluttered">{{task.name}}</p>
+            <p class="panel-main cluttered secondary">{{task.members.length}} Members</p>
+        </div>
+        
+        <div class="panel-body" ng-show="panelOpen">
+       
+            <div class="row">
+                <p>
+                    {{task.description}}
+                </p>
+            </div>
+            
+            <div class="row">
+                <button type="submit" class="submit"  ng-click="complete(task._id)">
+                    Complete
+                </button>
+            </div>
+            
+            <div class="row">
+                <a ng-href="/#/editTask/{{project._id}}/{{task._id}}"><button type="submit" class="edit" >
+                    Edit
+                </button></a>
+            </div>
+            
+            <div class="row">
+                <button type="submit" class="delete"  ng-click="delete(task._id)">
+                    Delete
+                </button>
+            </div>
+            
+        </div>
